app/k8s/istio-authz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: backend-policy
  namespace: employee-crud-dev
spec:
  selector:
    matchLabels:
      app: backend

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/employee-crud-dev/sa/default
